[project]
name = "networkxternal"
version = "0.3.0"
description = "NetworkX-like Python experience for Postgres, SQLite, MongoDB, and Neo4J"
authors = [
    { name = "Ash Vardanian", email = "1983160+ashvardanian@users.noreply.github.com" },
]
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
    "networkx",
    "sqlalchemy",
    "neo4j",
    "pymongo",
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Database",

    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"

[tool.setuptools.packages.find]
where = ["."]
include = ["networkxternal*"]
exclude = ["assets", "benchmarks"]

[tool.ruff]
line-length = 120
select = ["E", "F", "W", "C90"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["ruff>=0.9.9", "pytest"]
